--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,21 +5,29 @@
 
 .contenedor{
     text-align: center;
+    padding: 30px;
 }
 
 .teclasPantalla{
     color:darkseagreen;
 }
+.btnBorrar{
+    border-radius: 15px;
+    width: 120px;
+    height: 70px;
+}
 
-.botonEspacio{
-    border-radius: 50px;
+.btnEspacio{
+    border-radius: 15px;
     width: 520px;
-    height: 90px;
+    height: 70px;
 }
 
 button {
-    border-radius: 50px;
-    width: 90px;
-    height: 90px;
+    border-radius: 15px;
+    width: 70px;
+    height: 70px;
+    font-size: large;
+    margin: 2px;
 }
 
